{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 16,
  "lineage": "20a2b23b-e6c0-4226-502f-4a6fdf6b8732",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:660751646273:vpc/vpc-0b91f680b7588b87f",
            "cidr_block": "10.126.0.0/24",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0dc54ab6214ec91b0",
                "cidr_block": "10.126.0.0/24",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-0f42b06d75d4499f8",
                "cidr_block": "10.126.8.0/24",
                "state": "associated"
              },
              {
                "association_id": "vpc-cidr-assoc-069bfd391682be4c0",
                "cidr_block": "10.126.9.0/24",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-dc1deea6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Security_Ext_FW_Internet_VPC"
                ]
              }
            ],
            "id": "vpc-0b91f680b7588b87f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-017b9020050266599",
            "owner_id": "660751646273",
            "state": "available",
            "tags": {
              "Name": "Security_Ext_FW_Internet_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd",
            "arn_suffix": "net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd",
            "dns_name": "Symphony-MaintenancePage-NLB-6f085fd49cb10ffd.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "Symphony-MaintenancePage-NLB",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a7893a240ead65f7"
              },
              {
                "subnet_id": "subnet-0f14641bf3d02ce57"
              }
            ],
            "subnets": [
              "subnet-0a7893a240ead65f7",
              "subnet-0f14641bf3d02ce57"
            ],
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "UAT",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_role": "ECS"
            },
            "vpc_id": "vpc-0b91f680b7588b87f",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_public_443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd/9448de3de8285bbc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP443/a17c42bad73b59db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd/9448de3de8285bbc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app_public",
            "aws_lb_target_group.app_public_443"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_public_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd/cb1b4b36af481f24",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP80/bf3317b283698589",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:listener/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd/cb1b4b36af481f24",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:loadbalancer/net/Symphony-MaintenancePage-NLB/6f085fd49cb10ffd",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.app_public",
            "aws_lb_target_group.app_public_80"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_public_443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP443/a17c42bad73b59db",
            "arn_suffix": "targetgroup/Symphony-MaintenancePage-TCP443/a17c42bad73b59db",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP443/a17c42bad73b59db",
            "lambda_multi_value_headers_enabled": false,
            "name": "Symphony-MaintenancePage-TCP443",
            "port": 443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "UAT",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_role": "ECS"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b91f680b7588b87f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_public_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP80/bf3317b283698589",
            "arn_suffix": "targetgroup/Symphony-MaintenancePage-TCP80/bf3317b283698589",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:660751646273:targetgroup/Symphony-MaintenancePage-TCP80/bf3317b283698589",
            "lambda_multi_value_headers_enabled": false,
            "name": "Symphony-MaintenancePage-TCP80",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "app_version": "3.4.0",
              "backup_frequency": "Never",
              "billing_type": "Client",
              "client_name": "Kansas",
              "environment_name": "UAT",
              "project_name": "Symphony",
              "security_zone": "DMZ",
              "service_role": "ECS"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0b91f680b7588b87f"
          }
        }
      ]
    }
  ]
}